[gd_scene load_steps=7 format=1]

[ext_resource path="res://main/theme.tres" type="Theme" id=1]
[ext_resource path="res://main/highscore_entry.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/kenvector_future.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]

font/size = 20
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]

font/size = 60
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 3 )

[sub_resource type="Animation" id=3]

resource/name = "menu"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.4 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1280, 0 ), Vector2( 0, 0 ) ]
}

[node name="highscore_entry" type="Container"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = -1280.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 0.0
script/script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 64.0
margin/top = 224.0
margin/right = 226.0
margin/bottom = 270.0
custom_fonts/font = SubResource( 1 )
text = "NEW HIGHSCORE"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="panel" type="Panel" parent="."]

visibility/opacity = 0.9
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 64.0
margin/top = 272.0
margin/right = 1224.0
margin/bottom = 584.0

[node name="label_header" type="Label" parent="panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 16.0
margin/right = 1144.0
margin/bottom = 53.0
text = "You got a new highest score!"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="label_details" type="Label" parent="panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 64.0
margin/right = 1144.0
margin/bottom = 101.0
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
text = "You made it to position #0 with a score of 0000"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="label_help" type="Label" parent="panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 112.0
margin/right = 1144.0
margin/bottom = 149.0
text = "Enter your initials"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="line_edit" type="LineEdit" parent="panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 486.0
margin/top = 186.0
margin/right = 676.0
margin/bottom = 264.0
custom_fonts/font = SubResource( 2 )
placeholder/alpha = 0.1
align = 1
max_length = 3
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="okay_button" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 64.0
margin/top = 608.0
margin/right = 274.0
margin/bottom = 660.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "OKAY"
flat = false

[node name="animation" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/menu = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "menu"


